--- a/grid.css
+++ b/grid.css
@@ -3,10 +3,10 @@
 .body-grid {
     display: grid;
     width: 100%;
-    min-height: 100vh;
+    /*min-height: 100vh;*/
     background-color: var(--bg-white);
     grid-template-columns: 1fr;
-    grid-template-rows: 170px auto 120px 1fr auto 100px;
+    grid-template-rows: auto;
 }
 
 
@@ -16,24 +16,24 @@
 
 @media screen and (min-width: 768px) {
 	.body-grid {
-		grid-template-rows: 300px auto 120px 1fr auto 100px;
+		grid-template-rows: auto;
 	}
 }
 
 @media screen and (min-width: 992px) {
 	.body-grid {
-		grid-template-rows: 400px auto 120px 1fr auto 70px;
+		grid-template-rows: auto;
 	}
 }
 
 @media screen and (min-width: 1200px) {
 	.body-grid {
-		grid-template-rows: 500px 80px 120px 1fr 250px 70px;
+		grid-template-rows: auto;
 	}
 }
 
 @media screen and (min-width: 1400px) {
 	.body-grid {
-		grid-template-rows: 530px 120px 120px 1fr 250px 70px;
+		grid-template-rows: auto;
 	}
 }
