--- a/palette.css
+++ b/palette.css
@@ -1,15 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
-    --primary: #005ca1;
-    --secondary: #da251c;
-    --primary-dark: #033f6d;
-    --primary-mid: #005ca1;
-    --primary-light: #1b91e9;
-    --gray-dark: #242529;
-    --gray-mid: #333940;
-    --gray-mid2: #dcdbda;
-    --gray-light: #ebeae9;
+    --primary: #FFC700;
+    --secondary: #4A4C4C;
+    --tertiary: #898F8C;
+    --primary-dark: #E8BC32;
+    --primary-mid: #FFD642;
+    --primary-light: #FFE37F;
+
+    --gray-dark: #3C3D3C;
+    --gray-mid: #4A4C4C;
+    --gray-mid2: #6C6E6E;
+    --gray-light: #898F8C;
 	--text-white: #FFFFFF;
 	--bg-white: #FFFFFF;
     --breakpoint: 100%;
